<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/keywordSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keywordSearch"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/keywordSearchSS"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:contentDescription="@null"
                android:src="@drawable/keyword_search_ss"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keywordSearchHelp"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:id="@+id/ingredientSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredientSearch"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ingredientSearchSS"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:contentDescription="@null"
                android:gravity="center"
                android:src="@drawable/ingredient_search_ss" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredientSearchHelp"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/navigationMenuSS"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:contentDescription="@null"
                android:gravity="center"
                android:src="@drawable/ingredient_list_ss" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ingredientListHelp"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/searchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchResults"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/searchResultsSS"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:contentDescription="@null"
                android:gravity="center"
                android:src="@drawable/search_results_ss" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/searchResultsHelp"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/calorieCounting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calorieCounting"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/calorieCountingSS"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:contentDescription="@null"
                android:gravity="center"
                android:src="@drawable/calorie_counting_ss" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/calorieCountingHelp"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>